src/objects/Win_Strategy__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Opportunity_Value__c</fullName>
        <formula>Opportunity__r.Actual_Opportunity_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agency_s_Current_Budget__c</fullName>
        <formula>Opportunity__r.Budget_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency&apos;s Current Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brief_History_of_TriTech_s_Involvement__c</fullName>
        <label>Brief History of TriTech&apos;s Involvement</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COMPLETE_SEND__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to complete the current Win Strategy form and email it to the team</inlineHelpText>
        <label>COMPLETE &amp; SEND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Strengths_Weaknesses__c</fullName>
        <label>Competitor Strengths &amp; Weaknesses</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911 EMS Software, LLC</fullName>
                </value>
                <value>
                    <fullName>ACS-Firehouse</fullName>
                </value>
                <value>
                    <fullName>ADSI</fullName>
                </value>
                <value>
                    <fullName>AeroMed Software</fullName>
                </value>
                <value>
                    <fullName>Allegheny R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Alpine Software</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMCAD</fullName>
                </value>
                <value>
                    <fullName>Application Data Systems Inc. (ADSi)</fullName>
                </value>
                <value>
                    <fullName>Archonix</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Bighorn Systems</fullName>
                </value>
                <value>
                    <fullName>BIO-Key</fullName>
                </value>
                <value>
                    <fullName>Bradshaw Consulting</fullName>
                </value>
                <value>
                    <fullName>Cassidian</fullName>
                </value>
                <value>
                    <fullName>CIS Systems</fullName>
                </value>
                <value>
                    <fullName>Code 3 Software</fullName>
                </value>
                <value>
                    <fullName>Code Red</fullName>
                </value>
                <value>
                    <fullName>Cody</fullName>
                </value>
                <value>
                    <fullName>Commerx Corporation</fullName>
                </value>
                <value>
                    <fullName>ComnetiX</fullName>
                </value>
                <value>
                    <fullName>Computer Investment Advice, Inc.</fullName>
                </value>
                <value>
                    <fullName>CORE 911</fullName>
                </value>
                <value>
                    <fullName>Corporate Technologies, LLC</fullName>
                </value>
                <value>
                    <fullName>Crime Gog Technologies</fullName>
                </value>
                <value>
                    <fullName>CRIMES</fullName>
                </value>
                <value>
                    <fullName>CrimeStar</fullName>
                </value>
                <value>
                    <fullName>CR Management, Inc.</fullName>
                </value>
                <value>
                    <fullName>CTS</fullName>
                </value>
                <value>
                    <fullName>Cyrun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_Criteria__c</fullName>
        <label>Evaluation Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <inlineHelpText>If this field is left blank, the information provided in the Executive Summary field on the associated Opportunity will fill in.</inlineHelpText>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Overview_of_Project_Scope__c</fullName>
        <label>General Overview of Project Scope</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_1_Hot_Buttons_Biases__c</fullName>
        <label>Key Decision Maker 1 Hot Buttons/Biases</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Ultimate Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluation Committee Member</fullName>
                </value>
                <value>
                    <fullName>Everyday User</fullName>
                </value>
                <value>
                    <fullName>Gate Keeper</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Inside Coach</fullName>
                </value>
                <value>
                    <fullName>Introduction Maker</fullName>
                </value>
                <value>
                    <fullName>Not Involved</fullName>
                </value>
                <value>
                    <fullName>Obstructionist</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>Political Influencer</fullName>
                </value>
                <value>
                    <fullName>Recommender</fullName>
                </value>
                <value>
                    <fullName>Responsible for Money</fullName>
                </value>
                <value>
                    <fullName>Signature on Agreement</fullName>
                </value>
                <value>
                    <fullName>Technical Evaluator</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_1_Title__c</fullName>
        <formula>Key_Decision_Maker_1__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Decision Maker 1 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Maker 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Win Strategy</relationshipLabel>
        <relationshipName>Win_Strategy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_2_Hot_Buttons_Biases__c</fullName>
        <label>Key Decision Maker 2 Hot Buttons/Biases</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Ultimate Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluation Committee Member</fullName>
                </value>
                <value>
                    <fullName>Everyday User</fullName>
                </value>
                <value>
                    <fullName>Gate Keeper</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Inside Coach</fullName>
                </value>
                <value>
                    <fullName>Introduction Maker</fullName>
                </value>
                <value>
                    <fullName>Not Involved</fullName>
                </value>
                <value>
                    <fullName>Obstructionist</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>Political Influencer</fullName>
                </value>
                <value>
                    <fullName>Recommender</fullName>
                </value>
                <value>
                    <fullName>Responsible for Money</fullName>
                </value>
                <value>
                    <fullName>Signature on Agreement</fullName>
                </value>
                <value>
                    <fullName>Technical Evaluator</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_2_Title__c</fullName>
        <formula>Key_Decision_Maker_2__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Decision Maker 2 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Maker 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Win Strategy (Key Decision Maker 2)</relationshipLabel>
        <relationshipName>Win_Strategy1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_3_Hot_Buttons_Biases__c</fullName>
        <label>Key Decision Maker 3 Hot Buttons/Biases</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Ultimate Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluation Committee Member</fullName>
                </value>
                <value>
                    <fullName>Everyday User</fullName>
                </value>
                <value>
                    <fullName>Gate Keeper</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Inside Coach</fullName>
                </value>
                <value>
                    <fullName>Introduction Maker</fullName>
                </value>
                <value>
                    <fullName>Not Involved</fullName>
                </value>
                <value>
                    <fullName>Obstructionist</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>Political Influencer</fullName>
                </value>
                <value>
                    <fullName>Recommender</fullName>
                </value>
                <value>
                    <fullName>Responsible for Money</fullName>
                </value>
                <value>
                    <fullName>Signature on Agreement</fullName>
                </value>
                <value>
                    <fullName>Technical Evaluator</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_3_Title__c</fullName>
        <formula>Key_Decision_Maker_3__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Decision Maker 3 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Maker 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Win Strategy (Key Decision Maker 3)</relationshipLabel>
        <relationshipName>Win_Strategy2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Official_RFP_Name__c</fullName>
        <label>Official RFP Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <formula>IF( Opportunity__r.IsClosed ,( Opportunity__r.CloseDate - DATEVALUE( Opportunity__r.CreatedDate )), 
TODAY() - DATEVALUE(Opportunity__r.CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Win Strategy</relationshipLabel>
        <relationshipName>Win_Strategy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_and_Funding_Issues__c</fullName>
        <label>Pricing and Funding Issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Compliancy</fullName>
                </value>
                <value>
                    <fullName>Price and Compliancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_Statement__c</fullName>
        <label>Strategy Statement</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategy_to_Maximize_TriTech_s_Scoring__c</fullName>
        <label>Strategy to Maximize TriTech&apos;s Scoring</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_3_or_More_Differentiators__c</fullName>
        <label>Top 3 or More Differentiators</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TriTech_Strengths__c</fullName>
        <label>TriTech Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TriTech_Weaknesses__c</fullName>
        <label>TriTech Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <label>Win Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Win Strategy-{00000000}</displayFormat>
        <label>Win Strategy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Win Strategy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>